--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/png"  href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" type="image/png"  href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/cinco_logo.jpeg" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="apple-touch-icon" href="/cinco_logo.jpeg" />
+    <link rel="manifest" href="/manifest.json" />
     <title>CincoCare</title>
   </head>
   <body>
